--- a/source_working/WebPage_F4/WebPage_F4/CSS/dangkiStyleSheet.css
+++ b/source_working/WebPage_F4/WebPage_F4/CSS/dangkiStyleSheet.css
@@ -134,40 +134,6 @@ div#menu{
 	color:#454142;
 }
 
-#banner #textboxLogin{
-	position: absolute;
-	bottom:0;
-	right: 110px;
-	width:521px;
-	height: 50px;
-}
-
-.inputBox{
-	font-size: 18px;
-	font-family:Verdana, Geneva, sans-serif;
-	color:#000;
-	width:236px;
-	height:25px;
-	margin-top: 14px;
-	border:none;
-}
-
-.inputBoxMarginLeft1{
-	margin-left:0;
-}
-
-.inputBoxMarginLeft2{
-	margin-left: 25px;
-}
-
-.inputBoxWith1{
-	width:236px;
-}
-
-.inputBoxWith2{
-	width:140px;
-}
-
 /*=======this is the main content =======================*/
 #maincontent{
 	position:relative;
@@ -182,6 +148,33 @@ div#menu{
 	width:105px;
 	height:1164px;
 	background:#FFF url(../images/leftContent.jpg) no-repeat;
+}
+
+#contentinfo #contentDangKi
+{
+	float:left;
+	width:995px;
+	height:1164px;
+}
+
+#contentDangKi #dangkiNguoiTimViec
+{
+	float:left;
+	height:427px;
+	width : 374px;
+	margin-left:60px;
+	margin-right:60px;
+	background:#FFF url(../images/nguoiTimViec.jpg) no-repeat;
+}
+
+#contentDangKi #dangkiNhaTuyenDung
+{
+	float:left;
+	height:427px;
+	width : 374px;
+	margin-left:60px;
+	margin-right:60px;
+	background:#FFF url(../images/nhaTuyenDung.jpg) no-repeat;
 }
 
 #maincontent #contentinfo{
@@ -240,6 +233,8 @@ div#menu{
 	height:1164px;
 	background:#FFF url(../images/rightcontent.jpg) no-repeat;
 }
+
+
 	
 /*=======this is the footer =============================*/
 
