--- a/source_working/WebPage_F4/WebPage_F4/CSS/dangkiStyleSheet.css
+++ b/source_working/WebPage_F4/WebPage_F4/CSS/dangkiStyleSheet.css
@@ -249,6 +249,12 @@ div#menu{
 	width: 680px;
 }
 
+#contentinfo #xacnhandangky{
+	float:left;
+	height:200px;
+	width: 680px;
+}
+
 #maincontent #rightcontent{
 	float:left;
 	width:97px;
