--- a/source_working/source_working/WebPage_F4/WebPage_F4/CSS/styleSheet.css
+++ b/source_working/source_working/WebPage_F4/WebPage_F4/CSS/styleSheet.css
@@ -77,6 +77,8 @@ div#menu{
 	width: 1200px;
 	height:44px;
 	background:#FFF url(../images/backgroundMenu.jpg) no-repeat;
+	top: 0px;
+	left: 0px;
 }
 
 #menu ul{
